--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.9.1",
-    "openai-api": "^1.3.1"
+    "openai-api": "^1.3.1",
+    "package.json": "^0.0.0"
   }
 }
